# 1st-Milestone-Deliverable-SF-Champion-Program

./: README.md  main.py  pyproject.toml  requirements.txt  snowflake.yml
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  config.py
app/services/: _common.py  catalog.py  classification.py  classify.py  cortex_docs.py  history.py  inventory.py  pii.py  policies.py  quality.py  rbac.py  scoring.py  stewardship.py  tags.py  trust_center.py
app/ui/tabs/: guide.py  landing.py  lineage.py  overview.py  policy.py  quality.py  remediation.py  scheduler.py  setup_wizard.py  sidebar.py  trust_center.py
governance_agent/: README.md  main.py  snowflake.yml
governance_agent/.streamlit/: secrets.toml
governance_agent/app/services/: access_audit.py  discovery.py  lineage.py  remediation.py
governance_agent/app/ui/: scan.py  sidebar.py  styles.py
governance_agent/app/ui/tabs/: __init__.py  access_audit.py  alerts.py  classification.py  cortex_docs.py  discovery.py  docs.py  history.py  pii.py  rbac.py  scan.py  stewardship.py  storage.py  tags.py
governance_agent/test/: __init__.py  test_catalog.py  test_common.py  test_html_report.py  test_pii.py  test_policies.py  test_rbac.py  test_scheduler.py  test_scoring.py  test_stewardship.py
sql/: column_level_security.sql
test/: conftest.py  main.py  test_access_audit.py  test_alerts.py  test_classification.py  test_classify.py  test_discovery.py  test_history.py  test_inventory.py  test_lineage.py  test_quality.py  test_remediation.py  test_storage.py  test_tags.py  test_trust_center.py
