[project]
name = "governance-agent"
requires-python = ">= 3.11"
version = "0.0.1"
description = ""
dependencies = [
    "streamlit[snowflake]>=1.54.0"
]

[tool.uv]
constraint-dependencies = ["numba>=0.56.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
